--- a/shop/shop/src/main/resources/application.properties
+++ b/shop/shop/src/main/resources/application.properties
@@ -1,10 +1,21 @@
-# Server port
-server.port=8080
+# ===============================
+# C?U HÌNH SQL SERVER
+# ===============================
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=shop;encrypt=true;trustServerCertificate=true;
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-# Thymeleaf
+# ===============================
+# JPA & HIBERNATE
+# ===============================
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+# ===============================
+# THYMELEAF & MISC
+# ===============================
 spring.thymeleaf.cache=false
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-
-# Logging
-logging.level.org.springframework.web=DEBUG
+server.port=8080
